@@ -1,15 +1,9 @@
-﻿using System;
-using System.Collections.Generic;
-using System.Linq;
-using System.Text;
-using System.Threading.Tasks;
-
-namespace RawConverter
+﻿namespace RawConverter
 {
     static class AboutThisApp
     {
         public static readonly string name = "Raw Converter";
-        public static readonly string version = "1.0.0";
-        public static readonly string buildDate = "2021-05-21";
+        public static readonly string version = "0.1.0";
+        public static readonly string buildDate = "2021-06-06";
     }
 }
