@@ -1,17 +1,5 @@
-﻿using System;
-using System.Collections.Generic;
-using System.IO;
-using System.Linq;
-using System.Text;
-using System.Threading.Tasks;
+﻿using System.IO;
 using System.Windows;
-using System.Windows.Controls;
-using System.Windows.Data;
-using System.Windows.Documents;
-using System.Windows.Input;
-using System.Windows.Media;
-using System.Windows.Media.Imaging;
-using System.Windows.Shapes;
 
 namespace RawConverter
 {
@@ -23,6 +11,9 @@ namespace RawConverter
         public AboutWindow()
         {
             InitializeComponent();
+
+            // set title
+            Title = AboutThisApp.name;
 
             // set labels
             LabelApplicationName.Content = AboutThisApp.name + " by Ludwig Sembach";
