@@ -1,3 +1,9 @@
 What's new in this version?
 
 First release.
+
+Some features are not yet supported:
+- Changing the input file type from .orf to. raw.
+- Changing the output file type from .jpg to .png or .tiff
+- Adjusting the output file image properties specifying image quality and other attributes.
+- The user interface for some of those features might already be available. Keep in mind that those controls are not linked to further code behind.
